--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/indy6678/psychic-octo-waddle/issues"
   },
-  "homepage": "https://github.com/indy6678/psychic-octo-waddle#readme"
+  "homepage": "https://github.com/indy6678/psychic-octo-waddle#readme",
+  "dependencies": {
+    "express": "^4.18.1",
+    "mongodb": "^4.10.0",
+    "mongoose": "^6.6.1"
+  }
 }
