--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/indy6678/psychic-octo-waddle#readme",
   "dependencies": {
+    "dayjs": "^1.11.5",
     "express": "^4.18.1",
     "mongodb": "^4.10.0",
     "mongoose": "^6.6.1"
